--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/tsoding/emoteJAM#readme",
   "devDependencies": {
+    "@types/gif.js": "^0.2.0",
     "typescript": "^4.3.2"
   }
 }
