(#76) Try to fail build if the user forgot to run tsc

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,3 +11,4 @@ jobs:
           node-version: '13'
       - run: npm install
       - run: ./node_modules/.bin/tsc
+      - run: git diff --exit-code
