--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Simple website that generates animated BTTV emotes from static images",
   "main": "index.js",
   "scripts": {
+    "build": "node build.js",
+    "watch": "node build.js watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +29,7 @@
   "homepage": "https://github.com/tsoding/emoteJAM#readme",
   "devDependencies": {
     "@types/gif.js": "^0.2.1",
+    "@types/node": "^20.9.3",
     "typescript": "^4.3.2"
   }
 }
