--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "node build.js",
+    "build": "node build.js build",
     "watch": "node build.js watch",
+    "serve": "node build.js serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
